--- a/GSI/Changelog.txt
+++ b/GSI/Changelog.txt
@@ -28,8 +28,7 @@ Battery animation in Settings->Battery;
 Font size increasing by 5%;
 Google Play icon in app info;
 Package name in app info;
-QS padding fixes for some DPIs;
-Three-fingers-swipe to screenshot
+QS padding fixes for some DPIs
 
 -Shipped apps
 Brave Browser;
