--- a/GSI/Changelog.txt
+++ b/GSI/Changelog.txt
@@ -32,13 +32,11 @@ QS padding fixes for some DPIs
 
 -Shipped apps
 Brave Browser;
-Digital Wellbeing;
 Open Camera;
 AnExplorer;
-Markup;
-Bare minimum GApps
+Markup
 
 ===========
 GSI updates
 ===========
-Sources updated to 08-09-2018
+Sources updated to 09-09-2018
