Ooof, OneDotThree already?

--- a/GSI/Changelog.txt
+++ b/GSI/Changelog.txt
@@ -1,30 +1,55 @@
-======================
-=Descendant OneDotTwo=
-======================
+========================
+=Descendant OneDotThree=
+========================
 
 ===================
 ====-Changelog-====
 ===================
 
-UI:
-Introducing Descendant circles.
-A "serious" icon-set in Settings.
+UI design changes:
 
-Lockscreen:
-Double tap to sleep on lockscreen
+    QS Customizer
+        You can now select the shape of your QuickSettings in:
+        Settings -> Display -> QS Customizazion
 
-Misc:
-Added support for MicroG
+    Replaced AOSP digital Lockscreen with Descendant Analog Clock
 
-Security:
-October Security Patches
+    Black UI style it's now available in:
+        Settings -> Display -> Background color
+
+    The background in search settings now respects system background on-click event
+
+    Brightness thumb icon revamped
+
+Launcher3:
+
+    Swipe down on a recent card is now available in:
+        Launcher3 Settings -> Clear all on swipe down from recents
+
+    Recents corner are now roundy to keep OS design consistency
+
+Misc features/improvements:
+
+    User now can select whether to show or not power menu on a secured lockscreen in:
+        Settings -> Descendant -> Power menu
+
+    Notification log added in:
+        Settings -> Apps & notifications -> Notifications -> Notification log
+
+    Improved performance for low-mid tier devices
+
+    Uniformed icon style in Descendant app
+
+Bugfixes:
+
+Fixed missing icon for double tap to sleep on lockscreen
+Fixed a mistake over Huawei phones that was preventing users to correctly use Fingerprint gestures
+Fixed a bug that was preventing AnExplorer to gain write access over SD Card
+Fixed an issue with the Battery preference crashing in Settings
+Fixed an issue with SD Card exploring via Settings
 
 =============
 =GSI updates=
 =============
 
-Latest phhusson sources (v106) plus the following mods:
-USSD are now working
-Huawei: Muting calls on RIL it's now working
-Huawei: HiSuite won't popup anymore
-Huawei: Better Signal Strength Indicator
+Synced to latest phh sources 15-10-2018
